--- a/LocaBet.xcodeproj/xcshareddata/xcschemes/Stubet.xcscheme
+++ b/LocaBet.xcodeproj/xcshareddata/xcschemes/Stubet.xcscheme
@@ -16,9 +16,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "311A57512C86D94A0040AA9A"
-               BuildableName = "Stubet.app"
-               BlueprintName = "Stubet"
-               ReferencedContainer = "container:Stubet.xcodeproj">
+               BuildableName = "LocaBet.app"
+               BlueprintName = "LocaBet"
+               ReferencedContainer = "container:LocaBet.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -36,9 +36,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "311A57662C86D94D0040AA9A"
-               BuildableName = "StubetTests.xctest"
-               BlueprintName = "StubetTests"
-               ReferencedContainer = "container:Stubet.xcodeproj">
+               BuildableName = "LocaBetTests.xctest"
+               BlueprintName = "LocaBetTests"
+               ReferencedContainer = "container:LocaBet.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "311A57702C86D94D0040AA9A"
-               BuildableName = "StubetUITests.xctest"
-               BlueprintName = "StubetUITests"
-               ReferencedContainer = "container:Stubet.xcodeproj">
+               BuildableName = "LocaBetUITests.xctest"
+               BlueprintName = "LocaBetUITests"
+               ReferencedContainer = "container:LocaBet.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -69,9 +69,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "311A57512C86D94A0040AA9A"
-            BuildableName = "Stubet.app"
-            BlueprintName = "Stubet"
-            ReferencedContainer = "container:Stubet.xcodeproj">
+            BuildableName = "LocaBet.app"
+            BlueprintName = "LocaBet"
+            ReferencedContainer = "container:LocaBet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -86,9 +86,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "311A57512C86D94A0040AA9A"
-            BuildableName = "Stubet.app"
-            BlueprintName = "Stubet"
-            ReferencedContainer = "container:Stubet.xcodeproj">
+            BuildableName = "LocaBet.app"
+            BlueprintName = "LocaBet"
+            ReferencedContainer = "container:LocaBet.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
